@@ -206,3 +206,31 @@ nil
           (foo '("1" "2")))))
 ((NIL ((T NIL) (NIL NIL)) ((T #()) (NIL #())))
  (50 ((T 50) (NIL 50)) ((T #(50 13 10)) (NIL #(50 13 10)))))
+
+(let ((fname "streamslong-tst-foo"))
+  (flet ((line-term (s) (encoding-line-terminator (stream-external-format s))))
+    (unwind-protect
+         (list
+          (with-open-file (f fname :direction :output :external-format :dos)
+            (let ((b (make-broadcast-stream f)))
+              (list (list (line-term b) (line-term f))
+                    (progn (setf (stream-external-format b :output) :unix)
+                           (list (line-term b) (line-term f)))
+                    (list (stream-element-type b) (stream-element-type f))
+                    (setf (stream-element-type b) '(unsigned-byte 8))
+                    (list (stream-element-type b) (stream-element-type f)))))
+          (with-open-file (f fname :direction :input :external-format :dos)
+            (let ((c (make-concatenated-stream f)))
+              (list (list (line-term c) (line-term f))
+                    (progn (setf (stream-external-format c :input) :unix)
+                           (list (line-term c) (line-term f)))
+                    (list (stream-element-type c) (stream-element-type f))
+                    (setf (stream-element-type c) '(unsigned-byte 8))
+                    (list (stream-element-type c) (stream-element-type f))))))
+      (delete-file fname))))
+(((:DOS :DOS) (:UNIX :UNIX)
+  (CHARACTER CHARACTER) (UNSIGNED-BYTE 8)
+  ((UNSIGNED-BYTE 8) (UNSIGNED-BYTE 8)))
+ ((:DOS :DOS) (:UNIX :UNIX)
+  (CHARACTER CHARACTER) (UNSIGNED-BYTE 8)
+  ((UNSIGNED-BYTE 8) (UNSIGNED-BYTE 8))))
