@@ -1,3 +1,8 @@
+2008-12-16  Sam Steingold  <sds@gnu.org>
+
+	* stream.d (STREAM-EXTERNAL-FORMAT): use (CAR
+	CONCATENATED-STREAM-STREAMS) instead of always returning :DEFAULT
+
 2008-12-15  Sam Steingold  <sds@gnu.org>
 
 	* modules/dirkey/dirkey.c (LDAP::DKEY-INFO): use safe_to_string
